fix stafflist width on small screens

--- a/style.css
+++ b/style.css
@@ -100,6 +100,11 @@ summary h2 {
 		align-items: center;
 		gap: 1.5rem;
 	}
+
+	.staff-list li {
+		flex-direction: column;
+		align-items: center;
+	}
 }
 
 a {
